:ambulance: Fucked up the paths

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,11 +55,11 @@ div {
       }
       // Gets overriden anyway
       &#ring_nu {
-        background: yellow;
+        background: #cad2c5;
       }
       // Gets overriden anyway
       &#find_vej {
-        background: pink;
+        background: #84a98c;
       }
     }
   }
